[project]
name = "challan-exploration"
version = "0.1.0"
description = ""
authors = [
    {name = "Prabhat Raman",email = "prabhat.raman@sap.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]

[tool.poetry]
packages = [{include = "challan_exploration", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
